update REPL-mode, fix bugs

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     [ "@babel/preset-env", {
       "targets": {
-        "browsers": ">0.25%"
+        "browsers": ">0.25%",
+        "node": "8"
       }
     }]
   ],
