--- a/packages/api/.babelrc
+++ b/packages/api/.babelrc
@@ -9,5 +9,9 @@
         }
       }
     ]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
