--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,20 +5,23 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec 'yarn' build --watch src",
-    "build": "babel src --out-dir lib",
+    "clean": "rm lib dist -rf",
+    "build": "yarn clean && babel src --out-dir lib && yarn browserify",
     "browserify": "browserify --full-paths lib/index.js --standalone KarmaApi -o dist/karma-api.js -d",
-    "postbrowserify": "uglifyjs --compress --mangle --sequences --drop_console --output dist/karma-api.min.js -- dist/karma-api.js"
+    "postbrowserify": "minify dist/karma-api.js -o dist/karma-api.min.js"
   },
   "dependencies": {
-    "karmajs-ws": "^0.1.5"
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^6.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "babel-minify": "^0.5.0",
     "browserify": "^16.2.3",
-    "nodemon": "^1.18.9",
-    "uglify-js-es6": "^2.8.9",
-    "yargs": "^12.0.5"
+    "nodemon": "^1.18.9"
   }
 }
